# scifi-evals

./: README.md  main.py  nvidia_nemotron-nano-9b-v2_free_responses.json  pyproject.toml  scifi-ethical-dilemmas-enhanced.json  scifi-ethical-dilemmas-with-decisions.json  x-ai_grok-4-fast_free_responses.json
data/analysis/: analysis_summary.md  clusters.json
data/merged/: merged_dilemmas_responses.json
data/responses/: deepseek-chat-v3.1_responses.json  gemma-3-27b_responses.json  gpt-5-nano_responses.json  kimi-k2_responses.json
docs/: app.js  cluster.js  dynamic-clustering-guide.md  embeddings.html  embeddings.js  enhanced-analysis-guide.md  evaluation-explainer.md  index.html  interactive-network-guide.md  report.html  styles.css
docs/data/: overall_report.json  per_dilemma_similarity.json  (+2 more)
scripts/: advanced_research_analysis.py  analyze_results.py  bge_similarity.py  call_openai_responses.py  check_embedding_gaps.py  cluster_topic_naming.py  comprehensive_model_analysis.py  dynamic_clustering_api.py  embed_cache.py  enhance_dilemmas.py  enhanced_clustering.py  export_embeddings_json.py  export_overall_report.py  export_per_dilemma_similarity.py  export_tensorflow_projector.py  generate_llm_responses.py  llm_cluster_interpreter.py  llm_providers.py  llm_research_analyst.py  merge_responses.py  moral_framework_analysis.py  prepare_moral_analysis.py  run_enhanced_analysis.py  run_moral_analysis.py  setup_local_tensorflow_projector.py  topic_naming_movie_quotes.py  transform_sources.py
tests/: conftest.py  test_bge_integration.py  test_cosine.py
(+32 files in other folders)
